--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -16,9 +16,10 @@ endif
 objs :=	nexus_main.o \
 	nexus_volume.o \
 	nexus_backend.o \
-	nexus_defaults.o \
+	nexus_config.o \
 	nexus_datastore.o \
 	nexus_hashtable.o \
+	nexus_user_data.o \
 	nexus_binaries.o \
 	nexus_encode.o \
 	nexus_util.o \
