progress towards volume creation

--- a/libnexus/nexus_default_volume_config.json
+++ b/libnexus/nexus_default_volume_config.json
@@ -1,16 +1,12 @@
 {
     "metadata_store" : {
         "name" : "FLAT",
-        "config" : {
-            "path" : "./.metadata"
-        }
+        "root_path" : "./.metadata"
     },
     
     "data_store" : {
         "name" : "FLAT",
-        "config" : {
-            "path" : "./.data"
-        }
+        "root_path" : "./.data"
     },
     
     "backend" : {
