--- a/libnexus/nexus_default_volume_config.json
+++ b/libnexus/nexus_default_volume_config.json
@@ -10,9 +10,9 @@
     },
     
     "backend" : {
-        "name" : "CLEARTEXT"
+        "name" : "CLEARTEXT",
         "config" : { }
-    },
+    }
 
 }
 
