--- a/shell/Makefile
+++ b/shell/Makefile
@@ -1,9 +1,24 @@
+include ../build.mk
 
 buildpath = ../build
 
+libs := -Wl,--whole-archive ../libnexus.a -Wl,--no-whole-archive -luuid -lpthread
+
+LDFLAGS := -L$(SGX_SDK)/lib64
+
+
+ifeq ($(SGX_MODE), SIM)
+	libs += -lsgx_urts_sim -lsgx_uae_service_sim
+else ifeq ($(SGX_MODE), HW)
+	libs += -lsgx_urts -lsgx_uae_service
+else
+        $(error Invalid SGX MODE)
+endif
+
+
 INCLUDES := -I../libnexus
 CFLAGS = -g -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter  -std=gnu11 $(INCLUDES)
-LDFLAGS =  -Wl,--whole-archive
+LDFLAGS +=  -Wl,--whole-archive
 
 CC = gcc
 AR = ar
@@ -17,8 +32,6 @@ exec_objs :=	main.o \
 
 execs := nexus_shell
 
-
-libs := -Wl,--whole-archive ../libnexus.a -Wl,--no-whole-archive -luuid
 
 build = \
         @if [ -z "$V" ]; then \
@@ -42,7 +55,7 @@ all: nexus_shell
 	$(call build,AR,$(AR) rcs $@ $^)
 
 nexus_shell: $(exec_objs) ../libnexus.a
-	$(call build,CC,$(CC) $(CFLAGS)  $(exec_objs)  $(libs) -o $@)
+	$(call build,CC,$(CC) $(CFLAGS)  $(exec_objs) $(LDFLAGS) $(libs) -o $@)
 
 
 define cscope-all-sources
