--- a/backend_sgx/Makefile
+++ b/backend_sgx/Makefile
@@ -43,6 +43,8 @@ EDGER8ER = $(SGX_SDK)/bin/x64/sgx_edger8r
 
 objs := nexus_enclave_u.o \
 	main.o \
+	volume_ops.o \
+	buffer_layer.o \
 	ocalls.o
 
 
