Fixed errors in cryptobuf, crypto and nexus_log. [BUILDS]
- changed nexus_cryptobuf key & iv to pointers
- SGX's libc does not have vasprintf, switched to using vsnprintf

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -46,6 +46,9 @@ SGX_ENCLAVE_SIGNER := $(SGX_SDK)/bin/x64/sgx_sign
 crypto_lib := mbedtls/library/libmbedcrypto.a
 
 nexus_trusted_objs := \
+	nexus_log.o \
+	nexus_hash.o \
+	nexus_mac.o \
 	nexus_util.o \
 	nexus_hash.o \
 	nexus_key.o \
