added data_buffer and made small bug fixes
- removed signature uuid argument on now uses authentication
- changed crypto_gcm_* routines to use internal 4K buffers
- added data_buffer

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -72,6 +72,7 @@ objs := nexus_enclave_t.o \
 	$(trusted_objs) \
 	$(ecall_objs) \
 	buffer_layer.o \
+	data_buffer.o \
 	crypto_buffer.o \
 	sealed_buffer.o \
 	raw_buffer.o \
