adding nexus_acl to manager access control

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -76,6 +76,7 @@ objs := nexus_enclave_t.o \
 	crypto_buffer.o \
 	sealed_buffer.o \
 	raw_buffer.o \
+	acl.o \
 	vfs.o \
 	crypto_context.o \
 	crypto.o \
