added key transfer layer that transports keys across the enclave boundary
- added the SEALED_BUFFER type to the nexus keys
- added nexus_key_buffer layer that carries the key in string format

--- a/backend_sgx/Makefile
+++ b/backend_sgx/Makefile
@@ -43,6 +43,7 @@ EDGER8ER = $(SGX_SDK)/bin/x64/sgx_edger8r
 
 objs := nexus_enclave_u.o \
 	main.o \
+	keybuf.o \
 	volume_ops.o \
 	dir_ops.o \
 	buffer_manager.o \
