--- a/frontend_fuse/fuse/meson.build
+++ b/frontend_fuse/fuse/meson.build
@@ -92,7 +92,7 @@ thread_dep = dependency('threads')
 #
 # Read build files from sub-directories
 #
-subdirs = [ 'lib', 'include', 'example', 'doc', 'test' ]
+subdirs = [ 'lib', 'include', 'example', 'test' ]
 if not platform.endswith('bsd')
   subdirs += 'util'
 endif
