Can now add/remove/ls files on nexus-fuse
- removed warning message about failed lookups and filldirs

--- a/frontend_fuse/Makefile
+++ b/frontend_fuse/Makefile
@@ -56,7 +56,7 @@ frontend_fuse.a: $(exec_objs)
 	$(call build,AR,$(AR) rcs $@ $^)
 	@cp $@ $(buildpath)
 
-nexus-fuse: $(exec_objs) ../libnexus.a
+nexus-fuse: $(exec_objs)
 	$(call build,CC,$(CC) $(CFLAGS) $^ $(LDFLAGS) $(libs) -o $@)
 
 
