updated API for encrypt/decrypt file content across the enclave

--- a/backend_sgx/Makefile
+++ b/backend_sgx/Makefile
@@ -46,6 +46,7 @@ objs := nexus_enclave_u.o \
 	keybuf.o \
 	volume_ops.o \
 	dir_ops.o \
+	file_ops.o \
 	buffer_manager.o \
 	xxhash.o \
 	ocalls.o
