removed dev in nexus_mod, added mmap & other minor fixes

--- a/frontend_afs/Makefile
+++ b/frontend_afs/Makefile
@@ -58,7 +58,7 @@ frontend_afs.a: $(exec_objs)
 	@cp $@ ../build
 
 nexus-afs: $(exec_objs)
-	$(call build,CC,$(CC) $(CFLAGS) $^ $(libs) -o $@)
+	$(call build,CC,$(CC) $(CFLAGS) $^ $(LDFLAGS) $(libs) -o $@)
 
 
 
