added nexus_heap inteface that allows for shared memory paradigm

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -58,6 +58,7 @@ nexus_trusted_objs := \
 	nexus_key.o \
 	nexus_encode.o \
 	nexus_uuid.o \
+	nexus_heap.o \
 	hashmap.o
 
 trusted_objs := $(foreach o,$(nexus_trusted_objs),libnexus_trusted/$(o))
