--- a/probes/Makefile
+++ b/probes/Makefile
@@ -1,3 +1,5 @@
+include ../build.mk
+
 DTRACE = dtrace # the dtrace executable
 
 build = \
@@ -14,10 +16,18 @@ probes_SOURCES := backend_sgx.probes.d
 probes_OBJECTS := $(patsubst %.d,%.o,$(probes_SOURCES))
 probes_HEADERS := $(patsubst %.d,%.h,$(probes_SOURCES))
 
-probes_library := libnexus_probes.a
+ifeq ($(DTRACE_ENABLED), 1)
+        probes_library := libnexus_probes.a
+else
+        probes_library := dummy
+endif
 
 
 all: $(probes_library)
+
+.PHONY: dummy
+dummy:
+	$(call build,AR,$(AR) -M < libnexus_probes.mri)
 
 %.h: %.d
 	$(call build,DTRACE,$(DTRACE) -C -h -s $< -o $@)
@@ -25,9 +35,8 @@ all: $(probes_library)
 %.o: %.d
 	$(call build,DTRACE,$(DTRACE) -C -G -s $< -o $@)
 
-$(probes_library): $(probes_HEADERS) $(probes_OBJECTS)
+libnexus_probes.a: $(probes_HEADERS) $(probes_OBJECTS)
 	$(call build,AR,$(AR) rcs $@ $(probes_OBJECTS))
-	@cp $@ ../build
 
 headers: $(probes_HEADERS)
 
