first steps towards rootkey exchange in nexus

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -74,12 +74,14 @@ nexus_trusted_objs := \
 	nexus_uuid.o \
 	nexus_heap.o \
 	nexus_ringbuf.o \
+	tweetnacl.o \
 	hashmap.o
 
 trusted_objs := $(foreach o,$(nexus_trusted_objs),libnexus_trusted/$(o))
 
 
 nexus_ecall_objs := \
+	instance.o \
 	dirs.o \
 	files.o \
 	volume.o
