adding compile flags for afs frontend

--- a/frontend_afs/Makefile
+++ b/frontend_afs/Makefile
@@ -18,7 +18,7 @@ execs := nexus-afs
 
 
 libs := -Wl,--whole-archive ../libnexus.a -Wl,--no-whole-archive -luuid\
-	-lpthread
+	-lpthread -lcurl
 
 LDFLAGS := -L$(SGX_SDK)/lib64
 
