added fs_stat and changed fs_lookup to return UUID

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -30,7 +30,8 @@ INCLUDE := -I$(SGX_SDK)/include \
 
 CFLAGS  += -nostdinc \
 	-fvisibility=hidden -fpie -fPIC -fstack-protector -mpclmul -maes -mavx -w \
-	-W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 -fPIC
+	-W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 -fPIC\
+	-Werror=implicit-function-declaration
 
 
 
