Implemented the file_crypto API for streaming-like fetch/store
- updated backend_sgx, libnexus and frontend_fuse
- writing is a lot faster

added file crypto and updated ecalls

updated filenode_get_chunk API and Makefile

added backend_sgx & ecall support for file_crypto

changed libnexus api for file_crypto

update nexus_fuse_fetch/store to use new API

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -28,7 +28,7 @@ INCLUDE := -I$(SGX_SDK)/include \
 	-Ilibnexus_trusted \
 	-I..
 
-CFLAGS  += -nostdinc \
+CFLAGS  += -nostdinc -pedantic \
 	-fvisibility=hidden -fpie -fPIC -fstack-protector -mpclmul -maes -mavx -w \
 	-W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 -fPIC\
 	-Werror=implicit-function-declaration
@@ -112,6 +112,7 @@ objs := nexus_enclave_t.o \
 	bucket.o \
 	filenode.o \
 	supernode.o \
+	file_crypto.o \
 	main.o
 
 
