--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -30,8 +30,7 @@ objs :=	nexus_main.o \
 	nexus_file_handle.o \
 	nexus_json.o \
 	nexus_heap.o \
-	nexus_ringbuf.o \
-	xxhash.o
+	nexus_ringbuf.o
 
 
 
