can now assign/revoke attributes on both files and dirs

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -181,7 +181,7 @@ cscope:
 
 .PHONY: clean
 clean:
-	rm -rf *.a *.o *.so nexus_enclave_t.* libnexus_trusted/*.o ecalls/*.o
+	rm -rf *.a *.o *.so nexus_enclave_t.* libnexus_trusted/*.o ecalls/*.o abac/*.o
 
 .PHONY: distclean
 distclean: clean
