--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -83,6 +83,8 @@ trusted_objs := $(foreach o,$(nexus_trusted_objs),libnexus_trusted/$(o))
 
 
 nexus_abac_objs := \
+	enforcer.o \
+	system_functions.o \
 	runtime.o \
 	parser_lexer.o \
 	policy_rule.o \
