refactoring policy_atom, added the argument data type

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -95,6 +95,7 @@ datalog_engine_objs := $(foreach o,$(_datalog_engine_objs),datalog-engine/$(o))
 
 nexus_abac_objs := \
 	$(datalog_engine_objs) \
+	atom.o \
 	enforcer.o \
 	system_functions.o \
 	boolean_operators.o \
