first refactor of bouncer. split into fact and db

--- a/backend_sgx/enclave/Makefile
+++ b/backend_sgx/enclave/Makefile
@@ -95,6 +95,8 @@ datalog_engine_objs := $(foreach o,$(_datalog_engine_objs),datalog-engine/$(o))
 
 nexus_abac_objs := \
 	$(datalog_engine_objs) \
+	db.o \
+	fact.o \
 	bouncer.o \
 	value.o \
 	atom.o \
